Added instructions on idling

--- a/index.html
+++ b/index.html
@@ -58,6 +58,8 @@
                   <div id="app3" class="app dockApp column3" onclick="app('app3');" style='background-color: rgb(33, 173, 33); display: block; margin-top:0px;'></div>
                   <div id="app4" class="app dockApp column4" onclick="app('app4');" style='background-color: red; display: block;'></div>
               </div>
+              <div id="inactivityMsg" style="display:none; color:white; text-align: center;"><h4>Click an app</h4></div>
+    <div id="inactivityMsg2" style="display:none; color:white; text-align: center;"><h4>Click the line at the bottom</h4></div>
               <div id='swipe' onclick='home();' style='display: none; background-color: black;'></div>
           </div>
       </div>
