Lots of stuff happened
 - Added animations for inactivity
 - Added share int he bottom right of the phone (app4)

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
           <div id="phoneScreen">
               <div id ="time"><span id="timeText">12:07</span></div>
               <div id="phoneNotch"></div>
+              <img id = "sharepic" src="img/blue-share.png" style="display:none;">
               <div id='mainApps'>
                 <div id='row1' class='row'>
                   <div id="app5" class="app row1 column1" onclick="app('app5');" style='background-color: orange; display: block;'></div>
@@ -54,10 +55,10 @@
                 </div>
               </div>
               <div id="phoneDock">
-                  <div id="app1" class="app dockApp column1" onclick="app('app1');" style='background-color: rgb(74, 74, 255); display: block;'></div>
+                  <div id="app1" class="app dockApp column1" onclick="app('app1');" style='background-color: blue; display: block;'></div>
                   <div id="app2" class="app dockApp column2" onclick="app('app2');" style='background-color: green; display: block;'></div>
                   <div id="app3" class="app dockApp column3" onclick="app('app3');" style='background-color: rgb(33, 173, 33); display: block; margin-top:0px;'></div>
-                  <div id="app4" class="app dockApp column4" onclick="app('app4');" style='background-color: red; display: block;'></div>
+                  <div id="app4" class="app dockApp column4" onclick="app('app4');" style='background-color: red; display: block;'><img id = "shareicn" src="img/blue-share.png"></div>
               </div>
               <div id="inactivityMsg" style="display:none; color:white; text-align: center;"><h4>Click an app</h4></div>
     <div id="inactivityMsg2" style="display:none; color:white; text-align: center;"><h4>Click the line at the bottom</h4></div>
