Added rich embed

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="google-site-verification" content="TIPhYGYGO3tdQBu4w_BLR2Gk1XNJRH9Z5WjbplPThXw" />
     <meta property="og:type" content="website">
     <meta property="og:title" content="tinyphone" />
+    <meta property="og:description" content="click" />
     <meta property="og:url" content="https://tinyphone.netlify.app/" />
     <meta property="og:image" content="/img/favicon.png" /> 
 	  <meta name="theme-color" content="#086d6d">
