--- a/index.html
+++ b/index.html
@@ -17,6 +17,15 @@
     <meta name="viewport" content="width=device-width">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="description" content="a phone, in your web browser. It's pretty cool">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-VT8J1Q3HDS"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-VT8J1Q3HDS');
+    </script>
   </head>
   <body onload="startTime();">
     <a href="https://github.com/JohnjiRomanji/tinyphone" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#151513; color:#fff; position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
@@ -24,7 +33,7 @@
           <div id="phoneScreen">
               <div id ="time"><span id="timeText">12:07</span></div>
               <div id="phoneNotch"></div>
-              <img id = "sharepic" class = "sharebig" src="img/blue-share.png" style="display:none;">
+              <img id = "sharepic" class = "sharebig" src="img/blue-share.png" alt="share this website" style="display:none;">
               <h4 id = "sharetext" class="sharebig" style="display:none;">Click to share</h4>
               <div id='mainApps'>
                 <div id='row1' class='row'>
@@ -68,7 +77,7 @@
                   <div id="app1" class="app dockApp column1" onclick="app('app1');" style='background-color: blue; display: block;'></div>
                   <div id="app2" class="app dockApp column2" onclick="app('app2');" style='background-color: green; display: block;'></div>
                   <div id="app3" class="app dockApp column3" onclick="app('app3');" style='background-color: rgb(222, 90, 90); display: block; margin-top:0px;'></div>
-                  <div id="app4" class="app dockApp column4" onclick="app('app4');" style='background-color: rgb(251, 251, 79); display: block;'><img id = "shareicn" src="img/blue-share.png"></div>
+                  <div id="app4" class="app dockApp column4" onclick="app('app4');" style='background-color: rgb(251, 251, 79); display: block;'><img id = "shareicn" src="img/blue-share.png" alt="share this website"></div>
               </div>
               <div id="inactivityMsg" style="display:none; color:white; text-align: center;"><h4>Click an app</h4></div>
     <div id="inactivityMsg2" style="display:none; color:white; text-align: center;"><h4>Click the line at the bottom</h4></div>
