Revert "Better CSS"
This reverts commit ed9b32285d523d6629f7e4e91b7b88ed1dd619be.

--- a/index.html
+++ b/index.html
@@ -36,37 +36,37 @@
               <img id = "sharepic" class = "sharebig" src="img/blue-share.png" alt="share this website" style="display:none;">
               <h4 id = "sharetext" class="sharebig" style="display:none;">Click to share</h4>
               <div id='mainApps'>
-                <div class='row'>
+                <div id='row1' class='row'>
                   <div id="app5" class="app row1 column1" onclick="app('app5');" style='background-color: orange; display: block;'></div>
                   <div id="app6" class="app row1 column2" onclick="app('app6');" style='background-color: purple; display: block;'></div>
                   <div id="app7" class="app row1 column3" onclick="app('app7');" style='background-color: black; display: block;'></div>
                   <div id="app8" class="app row1 column4" onclick="app('app8');" style='background-color: rgb(13, 156, 0); display: block;'></div>
                 </div>
-                <div class='row'>
+                <div id='row2' class='row'>
                   <div id="app9" class="app row2 column1" onclick="app('app9');" style='background-color: brown; display: block;'></div>
                   <div id="app10" class="app row2 column2" onclick="app('app10');" style='background-color: midnightBlue; display: block;'></div>
                   <div id="app11" class="app row2 column3" onclick="app('app11');" style='background-color: teal; display: block;'></div>
                   <div id="app12" class="app row2 column4" onclick="app('app12');" style='background-color: SandyBrown; display: block;'></div>
                 </div>
-                <div class='row'>
+                <div id='row3' class='row'>
                   <div id="app13" class="app row3 column1" onclick="app('app13');" style='background-color: grey; display: block;'></div>
                   <div id="app14" class="app row3 column2" onclick="app('app14');" style='background-color: silver; display: block;'></div>
                   <div id="app15" class="app row3 column3" onclick="app('app15');" style='background-color: fuchsia; display: block;'></div>
                   <div id="app16" class="app row3 column4" onclick="app('app16');" style='background-color: cadetblue; display: block;'></div>
                 </div>
-                <div class='row'>
+                <div id='row4' class='row'>
                   <div id="app17" class="app row4 column1" onclick="app('app17');" style='background-color: rgb(82, 102, 98); display: block;'></div>
                   <div id="app18" class="app row4 column2" onclick="app('app18');" style='background-color: rgb(116, 116, 196); display: block;'></div>
                   <div id="app19" class="app row4 column3" onclick="app('app19');" style='background-color: rgb(180, 182, 55); display: block;'></div>
                   <div id="app20" class="app row4 column4" onclick="app('app20');" style='background-color: rgb(163, 0, 0); display: block;'></div>
                 </div>
-                <div class='row'>
+                <div id='row5' class='row'>
                   <div id="app21" class="app row4 column1" onclick="app('app21');" style='background-color: rgb(0, 197, 247); display: block;'></div>
                   <div id="app22" class="app row4 column2" onclick="app('app22');" style='background-color: rgb(255, 115, 0); display: block;'></div>
                   <div id="app23" class="app row4 column3" onclick="app('app23');" style='background-color: rgb(0, 231, 135); display: block;'></div>
                   <div id="app24" class="app row4 column4" onclick="app('app24');" style='background-color: rgb(20, 3, 121); display: block;'></div>
                 </div>
-                <div class='row'>
+                <div id='row6' class='row'>
                   <div id="app25" class="app row4 column1" onclick="app('app25');" style='background-color: rgb(110, 226, 120); display: block;'></div>
                   <div id="app26" class="app row4 column2" onclick="app('app26');" style='background-color: rgb(0, 204, 255); display: block;'></div>
                   <div id="app27" class="app row4 column3" onclick="app('app27');" style='background-color: rgb(90, 39, 133); display: block;'></div>
