Update social meta tags

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="tinyphone" />
     <meta property="og:description" content="click" />
     <meta property="og:url" content="https://tinyphone.netlify.app/" />
-    <meta property="og:image" content="/img/favicon.png" /> 
+    <meta property="og:image" content="/img/favicon.ico" /> 
 	  <meta name="theme-color" content="#086d6d">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
