--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>tinyphone</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="img/favicon.jpeg" />
     <link href="./css/main.css" rel="stylesheet" type="text/css" />
     <meta name="google-site-verification" content="TIPhYGYGO3tdQBu4w_BLR2Gk1XNJRH9Z5WjbplPThXw" />
     <meta property="og:type" content="website">
