--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>tinyphone</title>
-    <link rel="icon" type="image/x-icon" href="img/favicon.jpeg" />
+    <link rel="icon" type="image/x-icon" href="img/favicon.ico" />
     <link href="./css/main.css" rel="stylesheet" type="text/css" />
     <meta name="google-site-verification" content="TIPhYGYGO3tdQBu4w_BLR2Gk1XNJRH9Z5WjbplPThXw" />
     <meta property="og:type" content="website">
     <meta property="og:title" content="tinyphone" />
     <meta property="og:description" content="click" />
     <meta property="og:url" content="https://tinyphone.netlify.app/" />
-    <meta property="og:image" content="/img/favicon.ico" /> 
+    <meta property="og:image" content="/img/favicon.jpeg" /> 
 	  <meta name="theme-color" content="#086d6d">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width">
